[package]
name = "tor-rev-proxy"
version = "0.2.0"
edition = "2021"



[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
arti-client = {version = "0.26.0", features = ["static", "onion-service-client", "compression"]}
async-stream = "0.3.6"
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["now", "serde"] }
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.7"
console-subscriber = "0.4.1"
crossterm = "0.28.1"
cryptify = "3.1.1"
dashmap = "6.1.0"
either = "1.13.0"
futures = "0.3.31"
http = "1.2.0"
log = "0.4.25"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
ratatui = "0.29.0"
regex = "1.11.1"
replace_with = { version = "0.1.7", features = ["panic_abort"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
socket2 = "0.5.8"
strum = { version = "0.26.3", features = ["strum_macros"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "full", "net", "socket2", "io-util", "tracing"] }
tokio-native-tls = "0.3.1"
# tokio-native-tls = "0.3.1"
tor-rtcompat = { version = "0.26.0", features = ["native-tls", "tokio"] }
tryvial = "0.2.0"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["rng", "serde"] }
vec1 = "1.12.1"
webparse = "0.3.0"

[profile.release]
opt-level 		= 3
lto 			= "fat"
codegen-units 	= 1


